| Bug #26481 | Node failure during initial node restart, can lead to subsequent node failures | ||
|---|---|---|---|
| Submitted: | 19 Feb 2007 18:45 | Modified: | 26 Feb 2007 3:30 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0,5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[19 Feb 2007 18:45]
Jonas Oreland
[19 Feb 2007 20:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20135 ChangeSet@1.2288, 2007-02-19 20:13:08+01:00, jonas@perch.ndb.mysql.com +5 -0 ndb - bug#26481 fix for killed node during initial node restart
[19 Feb 2007 22:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20144 ChangeSet@1.2289, 2007-02-19 22:30:54+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - forgott to add testcase for bug#26481
[21 Feb 2007 16:21]
Tomas Ulin
5.0.37 5.1.16 ndb-6.1.3
[22 Feb 2007 15:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20360 ChangeSet@1.2420, 2007-02-22 15:02:48+01:00, jonas@eel.(none) +1 -0 ndb - bug#26481 - fix of bug fix Make sure GCP_SAVEREQ is not allowed before START_RECCONF has been sent...START_RECREQ is not enough
[22 Feb 2007 15:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/20366 ChangeSet@1.2294, 2007-02-22 15:31:21+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - bug#26481 - fix of bug fix 5.0 version
[26 Feb 2007 3:30]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bug fix in 5.0.38, 5.1.16, and ndb-6.1.3 changelogs.
[5 Mar 2007 16:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21154 ChangeSet@1.2105, 2007-03-05 16:03:27+01:00, jonas@perch.ndb.mysql.com +6 -0 ndb - wl2325-5.0 Bug#26481 Node failure duing initial node restart can make subsequent node restart fail with REDO corruption
