ndb - bug#26481   fix for killed node during initial node restart

ndb/src/kernel/blocks/dbdih/Dbdih.hpp:
  add flag for initial node restart, to keep track on when to concider it to be "done"
ndb/src/kernel/blocks/dbdih/DbdihInit.cpp:
  add flag for initial node restart, to keep track on when to concider it to be "done"
ndb/src/kernel/blocks/dbdih/DbdihMain.cpp:
  add flag for initial node restart, to keep track on when to concider it to be "done"
ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  Check cstartRecReq also when refusing GCP_SAVEREQ
ndb/test/ndbapi/testNodeRestart.cpp:
  add testcase